--- a/tests/crypto/test_cases/CMakeLists.txt
+++ b/tests/crypto/test_cases/CMakeLists.txt
@@ -25,6 +25,8 @@ zephyr_sources_ifdef(CONFIG_MBEDTLS_ECJPAKE_C           test_ecjpake.c)
 zephyr_sources_ifdef(CONFIG_MBEDTLS_CIPHER_MODE_CBC     test_aes_cbc.c)
 zephyr_sources_ifdef(CONFIG_MBEDTLS_CIPHER_MODE_CBC     test_aes_cbc_mac.c)
 zephyr_sources_ifdef(CONFIG_MBEDTLS_CIPHER_MODE_CTR     test_aes_ctr.c)
+zephyr_sources_ifdef(CONFIG_CC3XX_BACKEND               test_kdf_cmac_key.c)
+zephyr_sources_ifdef(CONFIG_CC3XX_BACKEND               test_kdf_cmac.c)
 
 if(CONFIG_REDUCED_TEST_SUITE)
     # Quick reduced case: Run only a selection of test vectors,
@@ -42,6 +44,8 @@ else()
     zephyr_sources_ifdef(CONFIG_MBEDTLS_ECDSA_C         test_vectors_ecdsa_sign.c)
     zephyr_sources_ifdef(CONFIG_MBEDTLS_ECDSA_C         test_vectors_ecdsa_verify.c)
     zephyr_sources_ifdef(CONFIG_MBEDTLS_ECJPAKE_C       test_vectors_ecjpake.c)
+    zephyr_sources_ifdef(CONFIG_CC3XX_BACKEND           test_vectors_kdf_cmac_key.c)
+    zephyr_sources_ifdef(CONFIG_CC3XX_BACKEND           test_vectors_kdf_cmac.c)
     if(CONFIG_CRYPTO_TEST_HASH)
         zephyr_sources_ifdef(CONFIG_MBEDTLS_SHA256_C    test_vectors_hkdf.c)
         zephyr_sources_ifdef(CONFIG_MBEDTLS_SHA256_C    test_vectors_hmac.c)
